Working implementation (todo: exception handling)